# DFS

./: DFS.cabal  README.md  build.sh  httprequests  run.sh  setup.sh  stack.yaml
AuthServer/: AuthServer.cabal  (+1 more)
ClientProxy/: #Clientcalls#  ClientProxy.cabal  Clientcalls  stack.yaml
ClientProxy/.stack-work/install/x86_64-linux/lts-7.13/8.0.1/flag-cache/: ClientProxy-0.1.0.0-9BMPHdvJGz0CItnFcEqFG3  ClientProxy-0.1.0.0-IdLS6IwgFz3D4JMQYl8KuJ  CommonResources-0.1.0.0-2hAoDRm32jf136sTU7I7w0  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0  http-api-data-0.3.2-A22DPUhAmUlrIoBZ4qkGB  servant-0.9.1.1-JzVvK9yk6sQ1E4UZympEK1  servant-client-0.9.1.1-Jfbv4D3w2K1d9wGI5VTz3  servant-server-0.9.1.1-66M2tFOHqQqK0MqMhFZVCd
ClientProxy/.stack-work/install/x86_64-linux/lts-7.13/8.0.1/pkgdb/: ClientProxy-0.1.0.0-9BMPHdvJGz0CItnFcEqFG3.conf  ClientProxy-0.1.0.0-IdLS6IwgFz3D4JMQYl8KuJ.conf  CommonResources-0.1.0.0-2hAoDRm32jf136sTU7I7w0.conf  bson-generic-0.0.8-DtORpoUHwQhDReLJ5Keop0.conf  http-api-data-0.3.2-A22DPUhAmUlrIoBZ4qkGB.conf  package.cache  servant-0.9.1.1-JzVvK9yk6sQ1E4UZympEK1.conf  servant-client-0.9.1.1-Jfbv4D3w2K1d9wGI5VTz3.conf  servant-server-0.9.1.1-66M2tFOHqQqK0MqMhFZVCd.conf
ClientProxy/.stack-work/install/x86_64-linux/lts-7.14/8.0.1/flag-cache/: ClientProxy-0.1.0.0-CaSNj6e4lFq9iCoIyuRtaa  ClientProxy-0.1.0.0-Eid8Wr4CQfm7EYEVwPoXyz  MonadRandom-0.4.2.3-8TfCm6PGvGYB7omozORhov  aeson-1.0.2.1-B1H7uvY9HnXH2BYsViQp5P  aeson-pretty-0.8.2-FiW0nqefZYBZIhTFiyfb3  ansi-terminal-0.6.2.3-448ipfN5j28Ha0AgPiJmdI  ansi-wl-pprint-0.6.7.3-LVnipygDrAR1FEMFhjxcQX  appar-0.1.4-1in4Ewd8JBkAYDZSWXLSe0  asn1-encoding-0.9.4-2Zu5ldLYD571Aw26w0CWF6  asn1-parse-0.9.4-Ai83ACtrOir9VlSOQtWm2F  asn1-types-0.3.2-4Rz223aP8OG6vnHYiLX5Ab  async-2.1.1-xFiBzw9xoB8HPZAuxUY2o  attoparsec-0.13.1.0-5Olk1S76r1CDYzFS6V3sZR  auto-update-0.1.4-GAesfFmqoZzBz6e09kRyzb  base-compat-0.9.1-tmPpmtbHbvIDjFWbkjGrR  base64-bytestring-1.0.0.1-In9M41tLtcS9QYt3QpGpNY  blaze-builder-0.4.0.2-KWDLbdBYSBoALiMW0LHIz1  blaze-html-0.8.1.3-8MBPJsFNBtBBD2gWERenva  blaze-markup-0.7.1.1-IE161DWDHNXF9O8bBguli5  bson-0.1.7-EfO3lqdNpyP7R8trpQ6nyr  bson-generic-0.0.6-30eJELZ6Ijc3ZMPnC8RdU  byteable-0.1.1-15aIBCArSOBEnGxArzrDTM  byteorder-1.0.4-BbL4c17EpZrL9PcZm0xys9  bytestring-builder-0.10.8.1.0-4GkSrJiY0n01lBdCh7onK  case-insensitive-1.2.0.7-FlqweN7AuKj9EdU2arVEt4  cereal-0.5.4.0-2FJYHGgtE5C3SxaZjt25xS  cmdargs-0.10.14-8WOlFWoK1XlCebTZE2edgd  compact-string-fix-0.3.2-DndIO7hdLRnH1KEjhXPArZ  connection-0.2.6-HdqI1haOFiwKHVrIKjItoA  cookie-0.4.2.1-2a2c54yIyBn79Ul3iLWclJ  cryptohash-0.11.9-9KNu0EEbreBFrmNJAeHgYz  cryptonite-0.19-G9PYO4oOEqhDTta2u9rAaU  (+80 more)
ClientProxy/.stack-work/intero/: intero10273QGF.hs  intero11178SPF.hs  intero12408bXF.hs  intero133126fF.hs  intero15685F0F.hs  intero16759SLG.hs  intero2407Nca.hs  intero4556gOy.hs  intero6077pDQ.hs  intero65148EQ.hs  intero9387mAF.hs
ClientProxy/.stack-work/intero/intero10273dQL/: ClientProxyApi.hi
ClientProxy/.stack-work/intero/intero11178fZL/: ClientProxyApi.hi
ClientProxy/.stack-work/intero/intero12408ohL/: ClientProxyApi.hi
ClientProxy/.stack-work/intero/intero13312HqL/: ClientProxyApi.hi
ClientProxy/.stack-work/intero/intero15685S-L/: ClientProxyApi.hi
ClientProxy/.stack-work/intero/intero16759fVM/: ClientProxyApi.hi
ClientProxy/.stack-work/intero/intero24687W_V/: LRUCache.hi
ClientProxy/.stack-work/intero/intero4556SYB/: ClientProxyApi.hi
ClientProxy/.stack-work/intero/intero60772NW/: LRUCache.hi
ClientProxy/.stack-work/intero/intero6514JPW/: ClientProxyApi.hi  LRUCache.hi
ClientProxy/.stack-work/intero/intero7846V8B/: ClientProxyApi.hi
ClientProxy/.stack-work/intero/intero7973UcW/: ClientProxyApi.hi  LRUCache.hi
ClientProxy/.stack-work/intero/intero9205HqC/: ClientProxyApi.hi  LRUCache.hi
ClientProxy/app/: Main.hs
ClientProxy/localstorage/: hi.txt  mymannanana.txt  one.txt
ClientProxy/src/: ClientProxyApi.hs  ClientProxyApi.hs~  LRUCache.hs
TransactionServer/: TransactionServer.cabal
TransactionServer/.stack-work/intero/: intero12761-oC.hs  intero13947NtC.hs  intero6744AxA.hs
TransactionServer/.stack-work/intero/intero12761LzI/: TransactionServer.hi
TransactionServer/.stack-work/intero/intero13947a3I/: TransactionServer.hi
TransactionServer/app/: Main.hs
TransactionServer/src/: TransactionServer.hs  TransactionServer.hs~
(+1577 files in other folders)
